<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="character"
            type="com.br.leoono.rickmorty.view.viewmodel.CharacterDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/testContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@color/teal_200"
                android:divider="?dividerVertical"
                android:orientation="vertical"
                android:padding="@dimen/default_content_padding">

                <TextView
                    android:id="@+id/txvCharacterName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/default_padding"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="#E3F2FD"
                    android:text="@{character.name}"
                    tools:text="Nome do Personagem" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:text="@string/gender"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:id="@+id/txvCharacterGender"
                        android:textColor="@color/white"
                        android:text="@{character.gender}"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:text="@string/status"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:id="@+id/txvCharacterStatus"
                        android:textColor="@color/white"
                        android:text="@{character.status}"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:text="@string/specie"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:id="@+id/txvCharacterSpecie"
                        android:textColor="@color/white"
                        android:text="@{character.specie}"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:text="@string/origin"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:id="@+id/txvCharacterOrigin"
                        android:textColor="@color/white"
                        android:text="@{character.origin}"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:text="@string/location"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:layout_gravity="start"
                        android:padding="@dimen/default_padding"
                        android:id="@+id/txvCharacterLocation"
                        android:textColor="@color/white"
                        android:text="@{character.location}"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgViewCharacter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="240dp"
                    android:src="@drawable/ic_baseline_image_not_supported_24" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>
</layout>